test; update tests with new getter